FCT Add basic quiz with 10 questions
The scores is only shown in an alert not saved anywhere

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
             <!--Centrealise header added by js-->
         </header>
         <main>
-            <h1>Home page</h1>
+            <h1>Trivia Quiz</h1>
+            <br>
+            <div class="row">
+                <div class="col-lg-6" style="margin: auto;">
+                <p>Welcome to the trivia quiz app. In this app, you will be presented with a series of questions and answers to test your knowledge. 
+                You can choose from a range of categories and the app will keep track of your score. The questions and answers are provided by the Open Trivia Database API.</p>
+                </div>
+            </div>
+            
+
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
