--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
-    <body class="bg-white text-success">
+    <body class="bg-white ">
         <header id="header">
             <!--Centrealise header added by js-->
         </header>
