--- a/trivia.html
+++ b/trivia.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
-    <body class="bg-white text-success">
+    <body class="bg-white">
         <header id="header">
             <!--Centrealise header added by js-->
         </header>
@@ -43,5 +43,6 @@
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
+        <script src="js/trivia.js"></script>
     </body>
 </html>
