--- a/result.html
+++ b/result.html
@@ -14,12 +14,14 @@
             <!--Centrealise header added by js-->
         </header>
         <main>
-            <h1>Result</h1>
+            <h1 class="fw-bold text-success mb-3">Result</h1>
             <div id="result" class="row">
 
             </div>
         </main>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <footer id="footer">
+            <!--Centrealise footer added by js-->
+        </footer>        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
         <script src="js/result.js"></script>
 
