--- a/trivia.html
+++ b/trivia.html
@@ -14,7 +14,7 @@
             <!--Centrealise header added by js-->
         </header>
         <main>
-            <h1>Start by choosing a category</h1>
+            <h1 class="fw-bold text-success mb-3">Start by choosing a category</h1>
             <br>
             <div class="row">
                 <div class="col-lg-6" style="margin: auto;">
@@ -41,6 +41,9 @@
                 </div>
             </div>
         </main>
+        <footer id="footer">
+            <!--Centrealise footer added by js-->
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
         <script src="js/trivia.js"></script>
