--- a/trivia.html
+++ b/trivia.html
@@ -19,8 +19,19 @@
             <div class="row">
                 <div class="col-lg-6" style="margin: auto;">
                     <form id="formCategories" action="submit">
+                        <label for="Categories">Category</label>
+                        <br>
                         <select name="Categories" id="Categories">
                             <!-- Ajouté dynamiquement par js -->
+                        </select>
+                        <br><br>
+                        <label for="difficulty">Difficulty</label>
+                        <br>
+                        <select name="Difficulties" id="Difficulties">
+                            <option value="0">Any difficulty</option>
+                            <option value="1">Easy</option>
+                            <option value="2">Medium</option>
+                            <option value="3">Hard</option>
                         </select>
                         <br> <br>
                         <button id="btnStartQuiz" type="submit" class="btn btn-success">
